# localization_tool_gui

./: pyproject.toml
localization_tool_gui/: main.py  translator.py
